--- a/src/app/_popupKomponente/generate-kunde/generate-kunde.component.html
+++ b/src/app/_popupKomponente/generate-kunde/generate-kunde.component.html
@@ -14,8 +14,11 @@
             <p>Name:</p>
             <input type="text" value="Thomas Brändle">
             <p>Adresse:</p>
-            <textarea class="inputAdresse" type="text">Friedaustrasse 3, 9608 Ganterschwil, CH - Schweiz
-            </textarea>
+            <input type="text" value="Friedaustrasse 3">
+            <p>Ortschaft:</p>
+            <input type="text" value="9608 Ganterschwil">
+            <p>Land:</p>
+            <input type="text" value="CH - Schweiz">
         </div>
         <div class="split secondSplit">
             <p>Website:</p>
