--- a/src/app/_hauptKomponente/a-login/a-login.component.html
+++ b/src/app/_hauptKomponente/a-login/a-login.component.html
@@ -4,14 +4,14 @@
             <img [src]="logo" alt="Goffini Logo mit Schriftzug 'Goffini, Ordnung|Form|Funktion'.">
         </div>
         <div class="loginForm">
-            <form action="">
+            <form [formGroup]="loginForm" (submit)="login(loginForm.value)">
                 <div class="loginUserName">
                     <img [src]="username" alt="" class="trennLinie">
-                    <input type="text" id="userName" placeholder="BENUTZERNAME">
+                    <input type="text" id="userName" placeholder="BENUTZERNAME" formControlName="username">
                 </div>
                 <div class="loginPasswort">
                     <img [src]="passwort" alt="" class="trennLinie">
-                    <input type="password" id="pWord" placeholder="PASSWORT">
+                    <input type="password" id="pWord" placeholder="PASSWORT" formControlName="password">
                 </div>
                 <div class="loginSubInfos">
                     <div class="chb">
@@ -21,7 +21,7 @@
                         </label>
                     </div>
                     <div class="pwFehler">
-                        <a href="">Passwort vergessen</a>
+                        <a routerLink="/passwort">Passwort vergessen</a>
                     </div>
                 </div>
                 <div class="submitLogin">
